# rova

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  llama-server.service  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: SKILLS.md  TOOLS.md  homebrew.rb  scoop.json
r105/: __init__.py  cli.py  commands.py  config.py  logging.py  mcp_client.py
r105/tui/screens/: chat.py
r105/tui/widgets/: diff_view.py  file_explorer.py  input_area.py
rova/: cli.py  client.py  commands.py  config.py  constants.py  errors.py  mcp_client.py  plugins.py  sandbox.py  skills.py  state.py  tools.py
rova/themes/: dracula.tcss  high-contrast.tcss  rova.tcss  solarized-dark.tcss
rova/tui/: app.py
rova/tui/screens/: chat.py  history_screen.py
rova/tui/widgets/: chat_view.py  command_palette.py  file_explorer.py  input_area.py  status_bar.py
skills/: python_pro.md
tests/: conftest.py  test_client.py  test_client_chaos.py  test_command_palette.py  test_commands.py  test_integration.py  test_skills.py  test_state.py  test_tools.py  test_tui.py
