[project]
name = "rova"
version = "0.2.0"
description = "Rova — Rapid On-demand Virtual Assistant: rich terminal frontend for llama-router"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "textual>=2.0.0",
    "rich",
    "python-pptx",
    "python-docx",
    "fpdf2",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8",
    "pytest-httpx>=0.35",
    "pytest-cov>=6",
    "build>=1",
    "twine>=6",
]

[project.urls]
Homepage = "https://github.com/bnelabs/rova"
Repository = "https://github.com/bnelabs/rova.git"
Issues = "https://github.com/bnelabs/rova/issues"

[project.classifiers]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Software Development :: User Interfaces",
]

[project.scripts]
rova = "rova.cli:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable strict flags that the codebase doesn't yet pass
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["rova"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "class .*\\(.*Protocol.*\\):",
]

[tool.setuptools.packages.find]
include = ["rova*"]
