[project]
name = "r105"
version = "0.3.0"
description = "r105 — Beyond the prompt. Rich terminal AI assistant for any OpenAI-compatible backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "textual>=2.0.0",
    "rich",
    "python-pptx",
    "python-docx",
    "fpdf2",
    "pillow",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "pytest-cov>=6",
    "build>=1",
    "twine>=6",
]

[project.urls]
Homepage = "https://github.com/bnelabs/r105"
Repository = "https://github.com/bnelabs/r105.git"
Issues = "https://github.com/bnelabs/r105/issues"

[project.scripts]
r105 = "r105.cli:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable strict flags that the codebase doesn't yet pass
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["r105"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "class .*\\(.*Protocol.*\\):",
]

[tool.setuptools.packages.find]
include = ["r105*"]
